2010-06-29 Magnus Hagdorn
 * Makefile.am: let make handle make.rules
 * configure.in: do not attempt to build python modules if all the bits are not
   present; allow SGE_OPTS to be overwritten on the command line
 * make.rules.in: add macros for python vis programs
 * PyGC/PyGC/GC_options.py: --vectors option takes the name of the field
 * PyGC/progs/plotGCvar: plot vectors for either velo or basal velo fields
 * PyGC/src/projmodule.c: initialise module from argument
 * example-drivers/EISMINT-3/EISMINT-3/Makefile.am: produce some graphics
 * example-drivers/eis/fenscan/Makefile.am: ditto
 * example-drivers/eis/fenscan/prof_a.data: add profile locations
 * m4macros/ac_python_devel.m4: get arch specific directory
 * m4macros/ax_python_module.m4: find python extensions
 * tests/EISMINT/EISMINT-2/Makefile.am: clean up

2010-06-24 Magnus Hagdorn
 * PyGC/PyGC/IO/GC_loadfile.py: be more verbose about missing variable
 * PyGC/PyGC/IO/GC_profile.py: add method to load a profile of a 3D variable
 * PyGC/progs/plotGCProfile: plot profiles of 3D variables

2010-06-23 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: enable profile handling options
 * PyGC/PyGC/IO/GC_profile.py: copied from PyCF, ported to use numpy
 * PyGC/PyGC/IO/GC_loadfile.py: use scipy for interpolation
 * PyGC/PyGC/IO/GC_netcdf.py: make variables sized
 * PyGC/PyGC/IO/GC_readlines.py: read a file ignoring comments
 * PyGC/PyGC/IO/Makefile.am: handle new files
 * PyGC/PyGC/IO/__init__.py: import new files
 * PyGC/progs/Makefile.am: handle new program
 * PyGC/progs/plotGCProfile: new program for plotting profiles
 * PyGC/progs/plotGCvar: add option to plot profile positions

2010-06-14 Magnus Hagdorn
 * make.rules.in: enable rule to build graphics
 * PyGC/PyGC/GC_options.py: all arguments are actually input files
 * PyGC/PyGC/IO/GC_loadfile.py: use the shape attribute to figure out length
   of dimension variables
 * PyGC/data/eismint2.data: data from published EISMINT2 experiments